<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/create_acc_main_win"
        android:layout_width="240dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/create_acc_text"
            android:layout_width="184.005dp"
            android:layout_height="20.26dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/create_account_text" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignLeft="@+id/create_acc_text"
            android:layout_alignRight="@+id/create_acc_text"
            android:layout_below="@+id/create_acc_text"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow"
            android:ems="10"
            android:hint="@string/createaccname"
            android:inputType="textPersonName"
            android:paddingLeft="15dp" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignLeft="@+id/email_field"
            android:layout_alignRight="@+id/email_field"
            android:layout_below="@+id/email_field"
            android:layout_marginTop="10dp"
            android:background="@drawable/shadow"
            android:ems="10"
            android:gravity="left|center_vertical|right"
            android:hint="@string/username"
            android:paddingLeft="15dp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignLeft="@+id/username_field"
            android:layout_alignRight="@+id/username_field"
            android:layout_below="@+id/username_field"
            android:layout_marginTop="10dp"
            android:background="@drawable/shadow"
            android:ems="10"
            android:hint="@string/createpassword"
            android:inputType="textPassword"
            android:paddingLeft="15dp" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignLeft="@+id/name_field"
            android:layout_alignRight="@+id/name_field"
            android:layout_below="@+id/name_field"
            android:layout_marginTop="10dp"
            android:background="@drawable/shadow"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignLeft="@+id/password_field"
            android:layout_alignRight="@+id/password_field"
            android:layout_below="@+id/password_field"
            android:layout_marginTop="20dp"
            android:background="@drawable/signup_button"
            android:onClick="signUpPressed"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>