<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circleview="http://schemas.android.com/apk/res/edu.cornell.opencomm"
    android:id="@+id/conference_v2_main_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/mainChat"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/conferencev2_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="42.67dp"
        android:background="@color/grey_thirtythree"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/confernecev2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc"
            android:gravity="center"
            android:text="@string/conference_name"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/conference_action_bar_back_button"
            android:layout_width="10.67dp"
            android:layout_height="14dp"
            android:layout_marginLeft="10.67dp"
            android:layout_marginTop="14.67dp"
            android:background="@color/grey_thirtythree"
            android:contentDescription="@string/desc"
            android:onClick="backButtonClicked"
            android:scaleType="centerInside"
            android:src="@drawable/action_arrow"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/conference_leave"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_thirtythree"
            android:contentDescription="@string/desc"
            android:onClick="exitConference"
            android:scaleType="centerInside"
            android:src="@drawable/left_door_conference" />


        <ImageButton
            android:id="@+id/conference_add"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@+id/conference_leave"
            android:background="@color/grey_thirtythree"
            android:contentDescription="@string/desc"
            android:onClick="addPersonClicked"
            android:scaleType="centerInside"
            android:src="@drawable/person_add_conference" />
    </RelativeLayout>
    
      <edu.cornell.opencomm.util.CircleView
          android:id="@+id/pieCircle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          circleview:cFillColor="#F2F2F2" />
      <TextView
        android:id="@+id/conference_invitationsList_title"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop = "120dp"
        android:layout_marginLeft = "60dp"
        android:paddingTop="10dp"
        android:paddingLeft="40.66dp"
        android:background="@drawable/invitation_background"
        android:text="@string/online_buddies"
        android:textSize="16sp"
        android:visibility="invisible" />
      <ListView
        android:id="@+id/conference_invitationsList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop = "160dp"
        android:layout_marginLeft = "60dp"
        android:divider="@color/black"
        android:dividerHeight="0.66dp"
        android:listSelector="@drawable/selector_bg_list"
        android:padding="0.66dp"
        android:background="@drawable/invitation_background"
        android:visibility="invisible" />

</RelativeLayout>