<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dashboard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/dashboard_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="42.66dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/grey_thirtythree" >
        <ImageView
            android:id="@+id/dashboardOverflowIcon"
            android:layout_width="5.33dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc"
            android:onClick="overflow"
            android:src="@drawable/action_overflow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/dashboard_actionbar"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/dashboard_opencomm"
            android:layout_width="240.66dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="66dp"
            android:text="@string/opencomm"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="27.33sp" />
   
       <TableLayout
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="30dp"
           android:background="@color/contact_info_background"
           android:shrinkColumns="*"
           android:stretchColumns="*">
       	<TableRow
       	    android:id="@+id/tableRow1"
       	    android:layout_height="wrap_content"
       	    android:layout_width="match_parent"
       	    android:gravity="center_horizontal">
       	    <TextView
       	        android:id="@+id/open_invitations"
       	        android:layout_marginTop="8dp"
       	        android:layout_marginBottom="8dp"
       	        android:textSize="20sp"
       	        android:textColor="@color/black"
       	        android:text="@string/open_invitations"/>
       	</TableRow>
       	         
       	<View
        	android:layout_height="2dip"
        	android:background="@color/white" /> 
       	<TableRow
       	    android:id="@+id/tableRow2"
       	    android:layout_height="wrap_content"
       	    android:layout_width="match_parent">
       	    <TextView
       	        android:id="@+id/first_digit"
       	        android:layout_marginTop="8dp"
       	        android:layout_marginBottom="8dp"
       	        android:textSize="20sp"
       	        android:layout_gravity="center"
       	        android:textColor="@color/black"
       	        android:text="@string/first" />
       	 	<TextView
       	        android:id="@+id/first_invitation"
       	        android:layout_marginTop="8dp"
       	        android:layout_marginBottom="8dp"
       	        android:textSize="20sp"
       	        android:layout_gravity="center"
       	        android:textColor="@color/black"
       	        android:text="@string/first_invitation"/>
       	</TableRow>
       	
        <TableRow
       	    android:id="@+id/tableRow3"
       	    android:layout_height="wrap_content"
       	    android:layout_width="match_parent">
       	    <TextView
       	        android:id="@+id/second_digit"
       	        android:layout_marginTop="8dp"
       	        android:layout_marginBottom="8dp"
       	        android:textSize="20sp"
       	        android:layout_gravity="center"
       	        android:textColor="@color/black"
       	        android:text="@string/first" />
       	 	<TextView
       	        android:id="@+id/second_invitation"
       	        android:layout_marginTop="8dp"
       	        android:layout_marginBottom="8dp"
       	        android:textSize="20sp"
       	        android:layout_gravity="center"
       	        android:textColor="@color/black"
       	        android:text="@string/first_invitation"/>
       	</TableRow>  
       			
       </TableLayout>     
        
        
    	<RelativeLayout
        android:id="@+id/dashboard_buttons"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
         
    		<Button
    		    android:id="@+id/contacts_button"
    		    android:layout_width="80dp"
    		    android:layout_height="80dp"
    		    android:background="@drawable/icon_contacts"
    		    android:onClick="ContactsPressed" />
    		
    		<Button
            	android:id="@+id/personalize_button"
           	 	android:layout_toRightOf="@id/contacts_button"
           	 	android:layout_width="80dp"
            	android:layout_height="80dp"
            	android:layout_marginLeft="45dp"
            	android:background="@drawable/icon_profile"
            	android:onClick="PersonalizePressed" />
    		
   	 	</RelativeLayout>

        
    </LinearLayout>
    
    <ListView
        android:id="@+id/dashboard_overflowList"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dashboard_actionbar"
        android:layout_marginRight="10.66dp"
        android:background="@color/white"
        android:divider="@color/black"
        android:dividerHeight="0.66dp"
        android:listSelector="@drawable/selector_bg_list"
        android:padding="0.66dp"
        android:visibility="invisible" />

</RelativeLayout>