<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_v2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginView" >
    
<RelativeLayout 
    android:layout_width="230dp"
    android:layout_height="340dp"
    android:background="@drawable/border"
    android:layout_centerInParent = "true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginView" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/tbx_usrn"
        android:layout_width="160dp"
        android:layout_height="36.67dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="66.67dp"
        android:ems="50"
        android:focusableInTouchMode="true"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="#5b5959"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/tbx_pwd"
        android:layout_width="160dp"
        android:layout_height="36.67dp"
        android:layout_alignLeft="@+id/tbx_usrn"
        android:layout_below="@+id/tbx_usrn"
        android:layout_marginTop="14dp"
        android:ems="40"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#5b5959"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="160dp"
        android:layout_height="35.33dp"
        android:layout_alignLeft="@+id/tbx_usrn"
        android:layout_alignRight="@+id/tbx_usrn"
        android:layout_below="@+id/tbx_pwd"
        android:layout_marginTop="14dp"
        android:background="@drawable/login_button"
        android:onClick="login"
        android:textSize="13.33sp" />
    
    <ImageView
        android:id="@+id/login_loginOverlay"
        android:layout_width="160dp"
        android:layout_height="35.33dp"
        android:layout_alignLeft="@+id/tbx_usrn"
        android:layout_alignRight="@+id/tbx_usrn"
        android:layout_below="@+id/tbx_pwd"
        android:layout_marginTop="14dp"
        android:src="@drawable/overlay_white"
        android:scaleType="fitXY"
        android:visibility="invisible"
         />
    
    <TextView
        android:id="@+id/forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_signin"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:text="@string/forgot_password"
        android:textSize="8sp"
        android:textColor = "@color/grey_eleven"
        android:clickable="true"
        android:onClick="forgot"
    />
    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="111.3dp"
        android:layout_height="21.38dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/welcome" />
    
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="126.67dp"
        android:layout_height="23.97dp"
        android:layout_below="@+id/forgot_pwd"
        android:layout_marginTop="8.67dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textColor="#ffffff"
        android:background = "@drawable/small_signup_button"
        android:onClick="signup"
        />
    <ImageView
        android:id="@+id/login_signupOverlay"
        android:layout_width="126.67dp"
        android:layout_height="23.97dp"
        android:layout_below="@+id/forgot_pwd"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
        android:src="@drawable/overlay_white"
        android:visibility="invisible"
         />

</RelativeLayout>
</RelativeLayout>